# goit_web

./: .gitignore
hw_10_django/quotes/quoteapp/: urls.py
hw_10_django/quotes/quotes/: settings.py  urls.py
hw_10_django/quotes/users/: forms.py  signals.py  views.py
hw_11_fastapi/: main.py
hw_11_fastapi/migrations/versions/: 36c015fd8b69_init.py
hw_11_fastapi/src/: schemas.py
hw_11_fastapi/src/database/: db.py  models.py
hw_11_fastapi/src/repository/: contacts.py
hw_11_fastapi/src/routes/: contacts.py
hw_12_authorization_authentication/: main.py
hw_12_authorization_authentication/migrations/: env.py
hw_12_authorization_authentication/src/: schemas.py
hw_13_backend/fastapi/: main.py  t.py
hw_14_testing/fastapi-project/: .env  main.py  pyproject.toml  test.db
hw_14_testing/fastapi-project/docs/source/: conf.py  index.rst
hw_14_testing/fastapi-project/migrations/: env.py
hw_14_testing/fastapi-project/migrations/versions/: 95aff9dc6d40_init.py
hw_14_testing/fastapi-project/src/conf/: config.py
hw_14_testing/fastapi-project/src/database/: models.py
hw_14_testing/fastapi-project/src/repository/: contacts.py  users.py
hw_14_testing/fastapi-project/src/routes/: auth.py  contacts.py  users.py
hw_14_testing/fastapi-project/src/services/: auth.py
hw_14_testing/fastapi-project/tests/: conftest.py  test_route_users.py  test_unit_repository_contacts.py  test_unit_repository_users.py
hw_4_web_sockets/: requirements.txt
hw_4_web_sockets/server/: main.py
hw_4_web_sockets/storage/: data.json
hw_8_nosql/second_task/: producer.py
(+43 files in other folders)
