[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["ollenaaa <90180725+ollenaaa@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.31"
pydantic = {extras = ["email"], version = "^2.8.2"}
libgravatar = "^1.0.4"
fastapi = "^0.111.0"
cloudinary = "^1.40.0"
pydantic-settings = "^2.3.4"
fastapi-mail = "^1.4.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
psycopg2 = "^2.9.9"
fastapi-limiter = "^0.1.6"
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.7"
bcrypt = "^4.1.3"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

